# vs_project

./: #Projekt Monika.py  .coverage  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  AP1.py  AP2.py  Add Teamworker  AudioPlayer.py  Bod.py  CetnostZnaku.py  Convert_Arabic_to_Roman.py  DV_Comit.txt  Dockerfile  Enums.py  Felberova_Lenka.txt  FilipJadrnicek_MorseCode.py  Intiger_na_rimske_cislice.py  JD_Commit.txt  JN_commit.txt  Main.py  Marek.txt  Minimax.py  Morse.py  MorseCode-flake8.py  MorseCode.py  MorseCodePrekladac.py  MorseCode_1.py  Morse_Code.py  Morse_source.py  Morse_test.py  Morseovka  Morseovka - Fiedlerova- Kabatova- Martinkova  Morseovka - Fiedlerova- Kabatova- Martinkova.py  Morseovka-Fiedlerova-Kabatova-Martinkova.py  Morseovka.py  Morseovka_.py  Morseovka_Dusek.py  Morseovka_Dusek_oprava.py  (+216 more)
.github/: README.txt  main.py  main_unit_test.py  morse.py  python_checker.yml  source.py
Audioplayer/: AP1.py  Audioplayer_Info.txt  test_AP1.py
DRAG/: Dragon.py  TestDragon.py  test_Dragon.py
Main a pytest/: Main.py  test.py
Mbezdecka/: Trojuhelnik.py
MinMax zadanie Susoliakova Milosicova/: #projektKlara.py  .coverage  README.md  cisla.txt  fcie_temp.py  main.py  sorts.py  test_main.py
Minimax/: Heapsort.py  Minimax.py  Quicksort.py
Morse/: Morseova_abeceda_A1VS.py  morse.py
Morse_code_translator/: morse.py  test_morse.py  tests.py  translator.py
Morseovka/: .Morseovka.pyproj  Morse.py  Morseovka.py  Morseovka.pyproj  Morseovka.sln
Pokus/: OvereniCisla.py  Overeni_Cisla.py  Vsko.py  test_r.py
Primes/: Primes.py  Primes_test.py
Project/: CetnostZnaku.py  Py.txt  TopicPicker.txt  UnitTesty.py  Zadani.txt  ZkusebniPy.Py  __init__.py  cetnost_znaku.py  decimalToBinary.py  decimalToHexadecimal.py  decimalToOctal.py  main.py  morsecode.py  pytest.py  readme.txt  test_Cetnosti.py  test_convertion.py  test_main.py  testpy.py
ProjectMorseCode/: Morseovka.py  Morseovka2.py  Morseovka3.py
Projekt/: .coverage  __init__.py  main.py  morzeovka.py  test_morzeovka.py
Prvočísla/: main.py  test_prvocislo.py
PythonApplication1/: PythonApplication1.py  PythonApplication1.pyproj
RomanNumerals/: RomanNumerals.sln
SujanskyDvorak/: source.py
Tests/: test_Cetnosti.py
__pycache__/: Main.py  Main.python  test_main.cpython-310-pytest-6.2.5.py  test_main.py  test_main.pytest
_pytest/: test_ZjisteniPrvocisel.py
char_recurrence/: main.py  test_main.py
characters/: soubor.py  test_soubor.py  tests.py  text.txt
docs/: main.html  search.js
draciKrivka/: draciKrivka.sln
example/: .coverage  Morseovka.py  Update __init__.py  __init__.py  _init_.py  basnicka.txt  basnicka_bezznaku.txt  ciselne_soustavy.py  main.py  morse.py  morseovka.py  morseovka_testy  morseovka_testy.py  morz.py  test__init__.py  test_ciselne_soustavy.py  test_main.py  test_morse.py  test_morz.py  testy_morseovka.py
htmlcov/: index.html  prace_py.html  status.json
kod/: morse.py  test_morse.py
kód/: projekt.py  test_projekt.py
main/: MorseCode.py  __init__.py  morse_code.py  test_main.py  test_morse_code.py
martinklimcik/: __init__.py  character_frequency.py
martinklimcik_cetnost_znaku/: __init__.py  char_freq.py  test_file.txt
minesweeper/: __init__.py  minesweeper_generator.py  (+1 more)
morse/: chars.py  (+3 more)
(+154 files in other folders)
